# qt-books-quick

./: AboutItemDelegate.qml  AboutScreen.qml  AppComboField.qml  AppGridView.qml  AppSpinField.qml  AppTextField.qml  BaseComboField.qml  BaseDetailFrame.qml  BaseTextField.qml  BookList.qml  BukuDetailFrame.qml  BukuEditDialog.qml  BukuList.qml  BukuListView.qml  BukuPilihDialog.qml  BukuScreen.qml  CMakeLists.txt  CardBackground.qml  CardDelegate.qml  CategoryList.qml  ConnectionScreen.qml  DashboardScreen.qml  DateField.qml  FloatingActionButton.qml  KategoriDetailFrame.qml  KategoriEditDialog.qml  KategoriList.qml  KategoriScreen.qml  Main.qml  MemberDetailFrame.qml  MemberEditDialog.qml  MemberList.qml  MemberPilihDialog.qml  MemberScreen.qml  PeminjamanDetailFrame.qml  PeminjamanEditDialog.qml  PeminjamanList.qml  PeminjamanScreen.qml  PenerbitDetailFrame.qml  PenerbitEditDialog.qml  (+108 more)
buku/: BukuDetailFrame.qml  BukuEditDialog.qml  BukuFilter.qml  BukuList.qml  BukuListView.qml  BukuPilihDialog.qml  BukuScreen.qml  bukueditviewmodel.cpp  bukueditviewmodel.h  bukupilihviewmodel.cpp  bukupilihviewmodel.h  bukuviewmodel.cpp  bukuviewmodel.h
design/: Design.drawio  add_data.sql  create_table.sql  db.sql  query.sql
entity/: buku.cpp  buku.h  kategori.cpp  kategori.h  member.cpp  member.h  peminjaman.cpp  peminjaman.h  penerbit.cpp  penerbit.h  pengadaan.cpp  pengadaan.h  user.cpp  user.h
kategori/: KategoriDetailFrame.qml  KategoriEditDialog.qml  KategoriList.qml  KategoriScreen.qml  kategorieditviewmodel.cpp  kategorieditviewmodel.h  kategoriviewmodel.cpp  kategoriviewmodel.h
member/: MemberDetailFrame.qml  MemberEditDialog.qml  MemberList.qml  MemberPilihDialog.qml  MemberScreen.qml  membereditviewmodel.cpp  membereditviewmodel.h  memberpilihviewmodel.cpp  memberpilihviewmodel.h  memberviewmodel.cpp  memberviewmodel.h
peminjaman/: PeminjamanDetailFrame.qml  PeminjamanEditDialog.qml  PeminjamanList.qml  PeminjamanScreen.qml  PengembalianAddDialog.qml  peminjamandendacalculator.cpp  peminjamandendacalculator.h  peminjamaneditviewmodel.cpp  peminjamaneditviewmodel.h  peminjamanviewmodel.cpp  peminjamanviewmodel.h  pengembalianviewmodel.cpp  pengembalianviewmodel.h
penerbit/: PenerbitDetailFrame.qml  PenerbitEditDialog.qml  PenerbitList.qml  PenerbitScreen.qml  penerbiteditviewmodel.cpp  penerbiteditviewmodel.h  penerbitviewmodel.cpp  penerbitviewmodel.h
pengadaan/: PengadaanDetailFrame.qml  PengadaanEditDialog.qml  PengadaanList.qml  PengadaanScreen.qml  pengadaaneditviewmodel.cpp  pengadaaneditviewmodel.h  pengadaanviewmodel.cpp  pengadaanviewmodel.h
repository/: bukurepository.cpp  bukurepository.h  configurationrepository.cpp  configurationrepository.h  kategorirepository.cpp  kategorirepository.h  memberrepository.cpp  memberrepository.h  peminjamanrepository.cpp  peminjamanrepository.h  penerbitrepository.cpp  penerbitrepository.h  pengadaanrepository.cpp  pengadaanrepository.h  settingrepository.cpp  settingrepository.h  sqlhelper.cpp  sqlhelper.h  userrepository.cpp  userrepository.h
repository/list/: bukulistmodel.cpp  bukulistmodel.h  kategorimodel.cpp  kategorimodel.h  penerbitmodel.cpp  penerbitmodel.h  pengadaanmodel.cpp  pengadaanmodel.h
usecase/: userusecase.cpp  userusecase.h
user/: UserBuatAdminScreen.qml  UserDetailFrame.qml  UserEditDialog.qml  UserList.qml  UserLoginScreen.qml  UserScreen.qml  userbaseeditviewmodel.cpp  userbaseeditviewmodel.h  userbuatadminviewmodel.cpp  userbuatadminviewmodel.h  userloginviewmodel.cpp  userloginviewmodel.h  userpegawaieditviewmodel.cpp  userpegawaieditviewmodel.h  userpegawaiviewmodel.cpp  userpegawaiviewmodel.h
